--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-admin = "^2.0.2"
 python-dotenv = "^1.0.1"
 gunicorn = "^23.0.0"
 django-bootstrap5 = "^24.2"
+dj-database-url = "^2.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
