--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 gunicorn = "^23.0.0"
 django-bootstrap5 = "^24.2"
 dj-database-url = "^2.2.0"
+django-filter = "^24.3"
 
 
 [tool.poetry.group.dev.dependencies]
