--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -1,4 +1,4 @@
-name: linter-check
+name: linter@coverage-check
 
 on:
   - push
@@ -25,3 +25,11 @@ jobs:
       - name: Run linter
         run: |
           make lint
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        if: github.ref_name == 'main'
+        env:
+            CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+            coverageCommand: make test-coverage
+            debug: true
