error2 linter-check

--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -29,6 +29,8 @@ jobs:
         uses: paambaati/codeclimate-action@v9.0.0
         if: github.ref_name == 'main'
         env:
+            DATABASE_URL: sqlite:///db.sqlite3
+            SECRET_KEY: ${{ secrets.SECRET_KEY }}
             CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
             coverageCommand: make test-coverage
