--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dj-database-url = "^2.2.0"
 django-filter = "^24.3"
 rollbar = "^0.16.3"
 coverage = "^7.6.1"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
