--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 python = "^3.10"
 django = "^5.1"
 django-admin = "^2.0.2"
-python-dotenv = "^1.0.1"
+python-dotenv = "^0.13.0"
 gunicorn = "^23.0.0"
 django-bootstrap5 = "^24.2"
 dj-database-url = "^2.2.0"
@@ -20,6 +20,7 @@ django-filter = "^24.3"
 rollbar = "^0.16.3"
 coverage = "^7.6.1"
 psycopg2-binary = "^2.9.9"
+docker = "^7.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
